# ferrobus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.md  deny.toml  ferrobus.pyi  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  audit.yml  codspeed.yml  release-prerelease.yml  test.yml
docs/source/: conf.py  demo.ipynb  ferrobus.rst  getting_started.rst  index.rst
docs/source/_static/: custom.css
ferrobus-core/: Cargo.toml
ferrobus-core/benches/: bench_main.rs
ferrobus-core/src/: error.rs  lib.rs  prelude.rs
ferrobus-core/src/algo/: isochrone.rs  mod.rs
ferrobus-core/src/loading/: builder.rs  config.rs  mod.rs  transfers.rs
ferrobus-core/src/loading/gtfs/: de.rs  mod.rs  parser.rs  processor.rs  raw_types.rs
ferrobus-core/src/loading/osm/: mod.rs  processor.rs
ferrobus-core/src/model/: mod.rs  transit_model.rs
ferrobus-core/src/model/streets/: components.rs  mod.rs  network.rs
ferrobus-core/src/model/transit/: data.rs  mod.rs  types.rs
ferrobus-core/src/routing/: detailed_itinerary.rs  dijkstra.rs  mod.rs  multimodal_routing.rs  pareto.rs
ferrobus-core/src/routing/dijkstra/: mod.rs  regular_dijkstra.rs  state.rs  traced_dijkstra.rs
ferrobus-core/src/routing/itinerary/: detailed_journey.rs  journey_leg.rs  mod.rs  to_geojson.rs
ferrobus-core/src/routing/raptor/: mod.rs  model_impl.rs  range_raptor.rs  regular.rs  state.rs  traced_raptor.rs  traced_state.rs
ferrobus-core/src/routing/raptor/common/: mod.rs  raptor_utils.rs  state.rs
ferrobus-core/src/routing/raptor/range/: range_raptor.rs
ferrobus-core/src/routing/raptor/regular/: default_raptor.rs  mod.rs
ferrobus-core/src/routing/raptor/traced/: state.rs  traced_raptor.rs
ferrobus-core/tests/: test_model_creation.rs
ferrobus-server/: Cargo.toml
ferrobus-server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
ferrobus-server/src/handlers/: analysis.rs  convert.rs  exec.rs  meta.rs  mod.rs  models.rs  routing.rs
src/: accessibility.rs  efficiency.rs  isochrone.rs  lib.rs  matrix.rs  model.rs  range_routing.rs  routing.rs
tests/python/: conftest.py  test.py  test_model_creation.py
tests/python/benches/: bench.py
tests/test-data/: roads_zhelez.pbf
tests/test-data/zhelez/: stop_times.txt
