[workspace]
resolver = "3"
members = ["ferrobus-core"]

[package]
name = "ferrobus"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "ferrobus"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
pyo3-log = "0.12"
pyo3-stub-gen = "0.7"
ferrobus_core = { path = "ferrobus-core" }
geo.workspace = true
rayon.workspace = true
wkt = "0.12.0"
serde_json = "1"

[workspace.dependencies]
geo = "0.29.0"
rayon = "1.10"

[profile.release]
lto = "fat"

