[workspace]
resolver = "3"
members = ["ferrobus-core"]

[package]
name = "ferrobus"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "ferrobus"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["chrono"] }
pyo3-log = "0.12"
pyo3-stub-gen = "0.7"
ferrobus_core = { path = "ferrobus-core" }
geo.workspace = true
geojson.workspace = true
rayon.workspace = true
chrono.workspace = true
wkt = "0.12.0"
serde_json = "1"

[workspace.dependencies]
geo = "0.30.0"
geojson = "0.24.0"
rayon = "1.10"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }

[profile.release]
lto = "fat"

