[workspace]
resolver = "3"
members = ["ferrobus-core", "ferrobus_macros"]

[package]
name = "ferrobus"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace.package]
edition = "2024"
version = "0.1.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chingiztob/ferrobus"

[lib]
name = "ferrobus"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["chrono"] }
pyo3-log = "0.12"
ferrobus_core = { path = "ferrobus-core" }
ferrobus_macros = { path = "ferrobus_macros" }
geo.workspace = true
geojson.workspace = true
rayon.workspace = true
chrono.workspace = true
serde_json.workspace = true
wkt = "0.12.0"

[workspace.dependencies]
geo = "0.30.0"
geojson = "0.24.0"
rayon = "1.10"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
serde_json = "1"

[dependencies.pyo3-stub-gen]
version = "0.7"
optional = true

[features]
stubgen = ["pyo3-stub-gen"]

[profile.release]
lto = "fat"

[profile.test]
opt-level = 1
