[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ferrobus"
description = "High-performance multimodal public transit routing library "
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = ["version"]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"

[project.urls]
Homepage = "https://github.com/chingiztob/ferrobus"
Documentation = "https://ferrobus.readthedocs.io/"

[dependency-groups]
dev = ["maturin", "pytest-codspeed>=4.2.0", "pytest>=8.4.0"]
docs = ["myst_nb", "sphinx-book-theme"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "Q", # flake8-quotes
]
lint.ignore = ["W293"] # Ignore blank line contains whitespace
exclude = ["venv"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "tests/python/*.py"]
