[package]
name = "ferrobus-server"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { version = "0.8", features = ["json"] }
chrono.workspace = true
clap = { version = "4.6", features = ["derive"] }
ferrobus_core = { path = "../ferrobus-core" }
geo.workspace = true
rayon.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.9"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
